--- a/css/background-position/index.html
+++ b/css/background-position/index.html
@@ -5,7 +5,7 @@
       div {
         display: inline-block;
         background-color: #ffee99;
-        background-image: url("star-transparent.gif"), url("cat-front.png");
+        background-image: url("star-transparent.gif");
         background-repeat: no-repeat;
         width: 100px;
         height: 100px;
@@ -28,6 +28,7 @@
         background-position: top;
       }
       .multiple {
+        background-image: url("star-transparent.gif"), url("cat-front.png");
         background-position:
           bottom left,
           top right;
