chore(background-position): refine example

--- a/css/background-position/index.html
+++ b/css/background-position/index.html
@@ -28,13 +28,16 @@
         background-position: top;
       }
       .multiple {
-        background-image: url("star-transparent.gif"), url("cat-front.png");
+        background-image: url("star-transparent.gif"), url("star-transparent.gif"), url("star-transparent.gif"), url("star-transparent.gif"), url("star-transparent.gif");
         background-position:
+          top left,
+          top right,
+          center,
           bottom left,
-          top right;
+          bottom right;
       }
       .side-relative {
-        background-position: bottom 10% right 20%;
+        background-position: bottom 20% right 20%;
       }
     </style>
   </head>
