fix(css/computed-properties): fix getComputedProperties() call

--- a/css/tools/computed-properties/index.html
+++ b/css/tools/computed-properties/index.html
@@ -878,7 +878,7 @@
         try {
             var styleElement = document.getElementById('output');
             var outputElement = document.getElementById('output');
-            var style = window.getComputedStyle(styleElement);
+            var style = window.getComputedStyle(styleElement, null);
 
 
             for (var i = 0; i < style.length; i++) {
