--- a/css/display-mode/index.html
+++ b/css/display-mode/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-US">
   <head>
     <meta charset="UTF-8" />
@@ -27,15 +27,10 @@
 
     <script>
       function toggleFullScreen() {
-        const el = document.documentElement;
-        const requestFullscreen =
-          el.requestFullscreen || el.webkitRequestFullscreen;
-        const exitFullscreen =
-          document.exitFullscreen || document.webkitExitFullscreen;
-        if (!(document.fullscreenElement || document.webkitFullscreenElement)) {
-          requestFullscreen();
-        } else if (exitFullscreen) {
-          exitFullscreen();
+        if (!document.fullscreenElement) {
+          document.documentElement.requestFullscreen();
+        } else if (document.exitFullscreen) {
+          document.exitFullscreen();
         }
       }
     </script>
