--- a/media/images/index.html
+++ b/media/images/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<html>
 <title>Image format test</title>
 <style>
   table {
@@ -87,3 +87,4 @@
     }
   </script>
 </body>
+</html>
