--- a/media/images/noscript.html
+++ b/media/images/noscript.html
@@ -5,6 +5,9 @@
     border-collapse: collapse;
   }
   th,td {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 8px;
     padding: 4px;
   }
   img {
@@ -14,23 +17,23 @@
 </style>
 <body>
 <table>
-<tr><td>animated.avif</td><td><img src="animated.avif" /></td></tr>
-<tr><td>animated.gif</td><td><img src="animated.gif" /></td></tr>
-<tr><td>animated.png</td><td><img src="animated.png" /></td></tr>
-<tr><td>animated.webp</td><td><img src="animated.webp" /></td></tr>
-<tr><td>image.avif</td><td><img src="image.avif" /></td></tr>
-<tr><td>image.bmp</td><td><img src="image.bmp" /></td></tr>
-<tr><td>image.gif</td><td><img src="image.gif" /></td></tr>
-<tr><td>image.heic</td><td><img src="image.heic" /></td></tr>
-<tr><td>image.ico</td><td><img src="image.ico" /></td></tr>
-<tr><td>image.jp2</td><td><img src="image.jp2" /></td></tr>
-<tr><td>image.jpg</td><td><img src="image.jpg" /></td></tr>
-<tr><td>image.jxl</td><td><img src="image.jxl" /></td></tr>
-<tr><td>image.png</td><td><img src="image.png" /></td></tr>
-<tr><td>image.svg</td><td><img src="image.svg" /></td></tr>
-<tr><td>image.tiff</td><td><img src="image.tiff" /></td></tr>
-<tr><td>image.webp</td><td><img src="image.webp" /></td></tr>
-<tr><td>image.xbm</td><td><img src="image.xbm" /></td></tr>
+<tr><td>animated.avif</td><td><img src="animated.avif" /></td><td style="background-image: url('animated.avif');"></td></tr>
+<tr><td>animated.gif</td><td><img src="animated.gif" /></td><td style="background-image: url('animated.gif');"></td></tr>
+<tr><td>animated.png</td><td><img src="animated.png" /></td><td style="background-image: url('animated.png');"></td></tr>
+<tr><td>animated.webp</td><td><img src="animated.webp" /></td><td style="background-image: url('animated.webp');"></td></tr>
+<tr><td>image.avif</td><td><img src="image.avif" /></td><td style="background-image: url('image.avif');"></td></tr>
+<tr><td>image.bmp</td><td><img src="image.bmp" /></td><td style="background-image: url('image.bmp');"></td></tr>
+<tr><td>image.gif</td><td><img src="image.gif" /></td><td style="background-image: url('image.gif');"></td></tr>
+<tr><td>image.heic</td><td><img src="image.heic" /></td><td style="background-image: url('image.heic');"></td></tr>
+<tr><td>image.ico</td><td><img src="image.ico" /></td><td style="background-image: url('image.ico');"></td></tr>
+<tr><td>image.jp2</td><td><img src="image.jp2" /></td><td style="background-image: url('image.jp2');"></td></tr>
+<tr><td>image.jpg</td><td><img src="image.jpg" /></td><td style="background-image: url('image.jpg');"></td></tr>
+<tr><td>image.jxl</td><td><img src="image.jxl" /></td><td style="background-image: url('image.jxl');"></td></tr>
+<tr><td>image.png</td><td><img src="image.png" /></td><td style="background-image: url('image.png');"></td></tr>
+<tr><td>image.svg</td><td><img src="image.svg" /></td><td style="background-image: url('image.svg');"></td></tr>
+<tr><td>image.tiff</td><td><img src="image.tiff" /></td><td style="background-image: url('image.tiff');"></td></tr>
+<tr><td>image.webp</td><td><img src="image.webp" /></td><td style="background-image: url('image.webp');"></td></tr>
+<tr><td>image.xbm</td><td><img src="image.xbm" /></td><td style="background-image: url('image.xbm');"></td></tr>
 </table>
 </body>
 </html>
