chore(media/images): add inline SVG to noscript test

--- a/media/images/noscript.html
+++ b/media/images/noscript.html
@@ -34,6 +34,7 @@
 <tr><td>image.tiff</td><td><img src="image.tiff" /></td><td style="background-image: url('image.tiff');"></td></tr>
 <tr><td>image.webp</td><td><img src="image.webp" /></td><td style="background-image: url('image.webp');"></td></tr>
 <tr><td>image.xbm</td><td><img src="image.xbm" /></td><td style="background-image: url('image.xbm');"></td></tr>
+<tr><td>(inline SVG)</td><td><svg xmlns="http://www.w3.org/2000/svg" width="8" height="8"><rect width="8" height="8" fill="#ff0000"/></svg></td></tr>
 </table>
 </body>
 </html>
